Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11422

rpl.rpl_parallel_optimistic_nobinlog failed in buildbot with "InnoDB: Killing connection failed Deadlock"

    XMLWordPrintable

Details

    • 10.2.4-1

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-deb-trusty-amd64/builds/4069/steps/test_5/logs/stdio

      rpl.rpl_parallel_optimistic_nobinlog 'stmt,xtradb' w1 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2016-11-29 17:27:17
      line
      2016-11-29 17:27:17 140288030135040 [Warning] InnoDB: Killing connection failed Deadlock(16)
      ^ Found warnings in /run/shm/var/1/log/mysqld.2.err
      ok
       
       - saving '/run/shm/var/1/log/rpl.rpl_parallel_optimistic_nobinlog-stmt,xtradb/' to '/run/shm/var/log/rpl.rpl_parallel_optimistic_nobinlog-stmt,xtradb/'
       
      Retrying test rpl.rpl_parallel_optimistic_nobinlog, attempt(2/3)...
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.